--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
             color: #1e293b;
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         header {
@@ -25,6 +27,7 @@
             border-bottom: 1px solid rgba(16, 185, 129, 0.2);
             backdrop-filter: blur(10px);
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+            flex-shrink: 0;
         }
 
         .header-container {
@@ -83,7 +86,9 @@
         .content-wrapper {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px 40px 20px;
+            padding: 0 20px;
+            flex: 1;
+            width: 100%;
         }
 
         /* Floating Button for Availability Checker */
@@ -383,6 +388,7 @@
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 25px;
             margin-bottom: 40px;
+            width: 100%;
         }
 
         .room-card {
@@ -395,6 +401,7 @@
             position: relative;
             overflow: hidden;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            width: 100%;
         }
 
         .room-card::before {
@@ -604,6 +611,65 @@
             opacity: 0.5;
         }
 
+        /* Footer Styles */
+        footer {
+            background: rgba(255, 255, 255, 0.9);
+            border-top: 1px solid rgba(16, 185, 129, 0.2);
+            padding: 30px 20px;
+            margin-top: 40px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.05);
+            flex-shrink: 0;
+        }
+
+        .footer-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .footer-creator {
+            font-size: 1.1em;
+            font-weight: 600;
+            color: #059669;
+            margin-bottom: 5px;
+        }
+
+        .footer-links {
+            display: flex;
+            gap: 20px;
+            align-items: center;
+        }
+
+        .footer-link {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            color: #64748b;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            font-size: 0.95em;
+        }
+
+        .footer-link:hover {
+            color: #10b981;
+            transform: translateY(-2px);
+        }
+
+        .footer-link svg {
+            width: 20px;
+            height: 20px;
+            fill: currentColor;
+        }
+
+        .footer-year {
+            color: #64748b;
+            font-size: 0.9em;
+        }
+
         @media (max-width: 768px) {
             h1 {
                 font-size: 2em;
@@ -652,6 +718,11 @@
 
             .availability-fab-text {
                 display: none;
+            }
+
+            .footer-links {
+                flex-direction: column;
+                gap: 10px;
             }
         }
     </style>
@@ -765,6 +836,28 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-creator">Dibuat oleh Endri Puta Bintang</div>
+            <div class="footer-links">
+                <a href="https://www.linkedin.com/in/endri-puta-bintang13" target="_blank" class="footer-link">
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.68 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
+                    </svg>
+                    LinkedIn
+                </a>
+                <a href="mailto:endribangor1@gmail.com" class="footer-link">
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                    </svg>
+                    Email
+                </a>
+            </div>
+            <div class="footer-year">© 2025</div>
+        </div>
+    </footer>
 
     <script>
         const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTvvHewile8pFiTtk_E11rk27pUGrQUbVrWjwQi45K1VOZC0Kuk_0oKsnIbXGSmtDuinyhS0uOnJjkH/pub?gid=0&single=true&output=csv';
