--- a/index.html
+++ b/index.html
@@ -1735,7 +1735,7 @@
                 <div class="room-card" onclick="showSchedule('Ningrat')" data-room="Ningrat">
                     <div class="room-name">Ningrat</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 8-10 orang</span>
+                        <span class="room-capacity">👥 2-5 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Ningrat">
                         <span class="status-dot"></span>
@@ -1746,7 +1746,7 @@
                 <div class="room-card" onclick="showSchedule('Juragan')" data-room="Juragan">
                     <div class="room-name">Juragan</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 6-8 orang</span>
+                        <span class="room-capacity">👥 2-4 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Juragan">
                         <span class="status-dot"></span>
@@ -1757,7 +1757,7 @@
                 <div class="room-card" onclick="showSchedule('Risk Taker')" data-room="Risk Taker">
                     <div class="room-name">Risk Taker</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 4-6 orang</span>
+                        <span class="room-capacity">👥 10-50 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Risk Taker">
                         <span class="status-dot"></span>
@@ -1768,7 +1768,7 @@
                 <div class="room-card" onclick="showSchedule('Gym')" data-room="Gym">
                     <div class="room-name">Gym</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 10-15 orang</span>
+                        <span class="room-capacity">👥 5-8 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Gym">
                         <span class="status-dot"></span>
@@ -1779,7 +1779,7 @@
                 <div class="room-card" onclick="showSchedule('Pak Aldi')" data-room="Pak Aldi">
                     <div class="room-name">Pak Aldi</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 4-6 orang</span>
+                        <span class="room-capacity">👥 5-10 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Pak Aldi">
                         <span class="status-dot"></span>
@@ -1790,7 +1790,7 @@
                 <div class="room-card" onclick="showSchedule('Bangor Outlet')" data-room="Bangor Outlet">
                     <div class="room-name">Bangor Outlet</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 5-8 orang</span>
+                        <span class="room-capacity">👥 10-20 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Bangor Outlet">
                         <span class="status-dot"></span>
@@ -1798,10 +1798,32 @@
                     </div>
                     <div class="room-action" onclick="event.stopPropagation(); showBookingModal('Bangor Outlet')">📅 Pesan Ruangan</div>
                 </div>
+                <div class="room-card" onclick="showSchedule('Ruang Meeting Besar Bacep')" data-room="Ruang Meeting Besar Bacep">
+                    <div class="room-name">Ruang Meeting Besar Bacep</div>
+                    <div class="room-info">
+                        <span class="room-capacity">👥 5-15 orang</span>
+                    </div>
+                    <div class="room-status-live" id="status-Ruang Meeting Besar Bacep">
+                        <span class="status-dot"></span>
+                        <span class="status-text">Memuat...</span>
+                    </div>
+                    <div class="room-action" onclick="event.stopPropagation(); showBookingModal('Ruang Meeting Besar Bacep')">📅 Pesan Ruangan</div>
+                </div>
+                <div class="room-card" onclick="showSchedule('Ruang Meeting Kecil Bacep')" data-room="Ruang Meeting Kecil Bacep">
+                    <div class="room-name">Ruang Meeting Kecil Bacep</div>
+                    <div class="room-info">
+                        <span class="room-capacity">👥 2-4 orang</span>
+                    </div>
+                    <div class="room-status-live" id="status-Ruang Meeting Kecil Bacep">
+                        <span class="status-dot"></span>
+                        <span class="status-text">Memuat...</span>
+                    </div>
+                    <div class="room-action" onclick="event.stopPropagation(); showBookingModal('Ruang Meeting Kecil Bacep')">📅 Pesan Ruangan</div>
+                </div>
                 <div class="room-card" onclick="showSchedule('Pizza Ranjang Outlet')" data-room="Pizza Ranjang Outlet">
                     <div class="room-name">Pizza Ranjang Outlet</div>
                     <div class="room-info">
-                        <span class="room-capacity">👥 5-8 orang</span>
+                        <span class="room-capacity">👥 5-15 orang</span>
                     </div>
                     <div class="room-status-live" id="status-Pizza Ranjang Outlet">
                         <span class="status-dot"></span>
