--- a/index.html
+++ b/index.html
@@ -1711,7 +1711,7 @@
                 <div class="stats-grid">
                     <div class="stat-card" onclick="showStatModal('total')">
                         <div class="stat-icon building"></div>
-                        <div class="stat-value" id="totalRooms">7</div>
+                        <div class="stat-value" id="totalRooms">9</div>
                         <div class="stat-label">Total Ruangan</div>
                     </div>
                     <div class="stat-card" onclick="showStatModal('available')">
@@ -2037,7 +2037,7 @@
         const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTvvHewile8pFiTtk_E11rk27pUGrQUbVrWjwQi45K1VOZC0Kuk_0oKsnIbXGSmtDuinyhS0uOnJjkH/pub?output=csv';
 
         let currentData = [];
-        let allRooms = ['Ningrat', 'Juragan', 'Risk Taker', 'Gym', 'Pak Aldi', 'Bangor Outlet', 'Pizza Ranjang Outlet'];
+        let allRooms = ['Ningrat', 'Juragan', 'Risk Taker', 'Gym', 'Pak Aldi', 'Bangor Outlet', 'Pizza Ranjang Outlet', 'Ruang Meeting Besar Bacep', 'Ruang Meeting Kecil Bacep'];
         let scrollTimeout;
         let isMobile = false;
 
