--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             box-sizing: border-box;
         }
 
+        html {
+            background-color: #0f172a;
+        }
+
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #0f172a 0%, #1e293b 25%, #1a365d 50%, #164e63 75%, #0f766e 100%);
