--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
         }
 
         html {
-            background-color: #0f766e;
+            background-color: #0f172a;
         }
-
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0f172a 0%, #1e293b 25%, #1a365d 50%, #164e63 75%, #0f766e 100%);
-            background-attachment: fixed;
+            background: transparent;
             color: #f1f5f9;
             min-height: 100vh;
             display: flex;
@@ -38,9 +36,11 @@
             height: 100%;
             background:
                 radial-gradient(circle at 20% 50%, rgba(16, 185, 129, 0.05) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(59, 130, 246, 0.05) 0%, transparent 50%);
+                radial-gradient(circle at 80% 80%, rgba(59, 130, 246, 0.05) 0%, transparent 50%),
+                linear-gradient(135deg, #0f172a 0%, #1e293b 25%, #1a365d 50%, #164e63 75%, #0f766e 100%);
+            background-size: cover;
             pointer-events: none;
-            z-index: -1;
+            z-index: -2;
         }
 
         header {
@@ -726,11 +726,6 @@
 
         /* Mobile scroll effect */
         @media (max-width: 768px) {
-            body {
-                background-attachment: scroll;
-                min-height: 100vh;
-            }
-
             .room-card.focused {
                 transform: scale(1.05);
                 box-shadow: 0 15px 40px rgba(16, 185, 129, 0.3);
